Made the .gitignore a bit more futureproof

--- a/.gitignore
+++ b/.gitignore
@@ -33,20 +33,8 @@ profile
 **/IDEWorkspaceChecks.plist
 **/Linux/build
 **/LinuxMakefile/build
-**/VisualStudio2005/Debug
-**/VisualStudio2005/Release
-**/VisualStudio2008/Debug
-**/VisualStudio2008/Release
-**/VisualStudio2010/Debug
-**/VisualStudio2010/Release
-**/VisualStudio2012/Debug
-**/VisualStudio2012/Release
-**/VisualStudio2013/Win32
-**/VisualStudio2013/x64
-**/VisualStudio2015/Win32
-**/VisualStudio2015/x64
-**/VisualStudio2017/Win32
-**/VisualStudio2017/x64
+**/VisualStudio[0-9]*/Win32
+**/VisualStudio[0-9]*/x64
 **/Builds/x64
 **/.vs
 **/CodeBlocks/bin
